# torchbit

./: .gitignore  CHANGELOG  CHANGELOG.md  README.md  README.zh-CN.md  pyproject.toml  setup.py
.claude-plugin/: marketplace.json
.claude/commands/: add_test.md  commit.md  update_changelog.md  update_git.md
.github/workflows/: docs.yml
dlrtl/: __init__.py  convert.py  dtype.py  gen_activation.py  hensor.py  judge.py  shape_process.py  utils.py
doc/: tensor.md  value.md
doc/en/: golden_model_recommend.md  tilling_schedule.md  verification_api.md
doc/pic/: 01_transaction.typ  02_driver_monitor.typ  03_buffer.typ  04_sequence.typ
doc/zh-CN/: golden_model_recomd.md  tilling_schedule.md  value.md  verification_api.md
docs/: Makefile  api.rst  conf.py  guide.rst  index.md
docs/_static/: custom.css  language-switch.js
docs/api/: core.rst  debug.rst  runner.rst  tiling.rst  tools.rst
docs/guide/: tiling.md  value.md
docs/zh/: index.md
examples/: README.md  gen_memhex.py  test_bit_ops.py  test_bit_struct.py  test_bit_struct_comparator.py  test_convert.py  test_hensor.py  test_hlist.py  test_hlist_with_verilog.py  test_matrix.py  test_matrix_with_verilog.py  test_struct.py  test_temporal_event.py  test_vector.py  test_wavetool.py
examples/01_basic_runner/: README.md  run.py  test_simple_counter.py
examples/02_data_convert/: README.md  run.py  test_data_convert.py
examples/03_bit_struct/: README.md  run.py  test_bit_struct.py
examples/04_driver_monitor/: README.md  run.py  test_pipe.py
examples/04_sender_collector/: README.md  run.py  test_pipe.py
examples/05_buffer/: README.md  run.py
examples/06_tile_mapping/: README.md  run.py  test_tile_mapping.py
examples/07_uvm_basics/: README.md  run.py  test_uvm_basics.py
examples/08_uvm_advanced/: README.md  run.py  test_uvm_advanced.py
examples/09_uvm_pipeline/: README.md  run.py
examples/test_sender_collector/: Pipe.sv  filelist.f  pipe_test.py
examples/test_waveform_output/: test_waveform.csv  test_waveform.vcd
skills/report_testbench/: SKILL.md
sv/: reader.sv  tb.sv  verilator.sh
tests/: __init__.py  conftest.py  test_buffer_backdoor_performance.py  test_buffer_tiling.py  test_component_db.py  test_driver_monitor.py  test_fifo.py  test_matrix.py  test_no_cocotb.py  test_ports.py  test_runner.py  test_sender_collector.py  test_strategy.py  test_tile_mapping.py  test_uvm.py  test_uvm_advanced.py  test_uvm_env.py  test_vector.py  verify_import.py
tests/reports/: performance_buffer_backdoor_2026-01-30.md
torchbit/: __init__.py  component.py  dtype.py  hensor.py  hlist.py  judge.py  shape_process.py  transform.py  utils.py
torchbit/core/: __init__.py  bit_struct.py  dtype.py  hlist.py  hw_matrix.py  hw_vector.py  int_sequence.py  logic_sequence.py  matrix.py  vector.py  vector_sequence.py
torchbit/debug/: __init__.py  bit_struct_comparator.py  judge.py  signallist.py  temporal_event.py  wave_tools.py
torchbit/runner/: __init__.py  config.py  (+2 more)
(+75 files in other folders)
