[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchbit"
version = "3.2.0"
description = "utils for deep learning accelerator developing"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [ { name = "ShuchengDu", email = "shuchengdu@ust.hk" } ]
keywords = ["deep-learning", "accelerator", "cocotb", "torch"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
urls = { "Homepage" = "https://github.com/Devil-SX/torchbit" }

dependencies = [
  "torch",
  "numpy",
  "matplotlib",
  "einops",
  "packaging",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[project.optional-dependencies]
cocotb = ["cocotb>=2.0.0"]
uvm = ["pyuvm>=4.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "."
